gatekeeper/namespace-deny-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: denynamespaces  # <- Update this to match the error message's suggestion
spec:
  crd:
    spec:
      names:
        kind: DenyNamespaces
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyall
        violation[{"msg": "Creation of namespace with name 'restricted' is prohibited"}] {
          input.review.object.metadata.name == "restricted"
        }
